# ms_ocr

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  convert_md_to_gamma.py  create_gamma_smart.py  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: brand.json
examples/: README.md
src/ms_ocr/: __init__.py  cli.py  pipeline.py
src/ms_ocr/exporters/: __init__.py  docx_exporter.py  gamma_exporter.py  gamma_text_exporter.py  json_schemas.py  md_exporter.py
src/ms_ocr/layout/: __init__.py  detector.py  rules.py
src/ms_ocr/ocr/: __init__.py  ocr_engine.py  postprocess.py  preprocess.py
src/ms_ocr/readers/: __init__.py  image_extractor.py  pdf_reader.py
src/ms_ocr/tables/: __init__.py  tables_extractor.py
src/ms_ocr/utils/: fs.py  lang.py  logger.py  metrics.py
tests/: __init__.py  test_cli.py  test_exporters.py  test_postprocess.py
